[project]
name = "toolviper"
version = "0.0.1"
description = ""
authors = [
    {name = "Joshua Hoskins", email="jhoskins@nrao.edu"},
    {name = "Jan Willem-Steeb", email="jsteeb@nrao.edu"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.9, < 3.13"

dependencies = [
    'astropy',
    'cerberus',
    'dask',
    'dask_jobqueue',
    'distributed',
    'matplotlib',
    'numba>=0.57.0',
    'numpy',
    'psutil',
    'ipywidgets',
    'prettytable',
    'pytest',
    'pytest-cov',
    'pytest-html',
    'rich',
    'scipy',
    'tqdm',
    'xarray',
    'zarr',
    'bokeh',
    'jupyterlab',
    'pyarrow',
    'graphviz',
    'rich',
    'python_casacore>=3.6.1; sys_platform != "darwin" '
]


[project.optional-dependencies]
docs = [
    'ipykernel',
    'ipympl',
    'ipython',
    'jupyter-client',
    'nbsphinx',
    'recommonmark',
    'scanpydoc',
    'sphinx-autoapi',
    'sphinx-autosummary-accessors',
    'sphinx_rtd_theme',
    'twine',
    'pandoc'
]